--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="main-heading">Todo CRUD App</h1>
         <div class="navigation" id="navigation">
             <div class="left-side">
-                <h3 class="sub-heading-one">Task Lists</h3>
+                <h3 class="sub-heading-one"><i class="fa-solid fa-bars"></i> &nbspTask Lists</h3>
             </div>
             <div class="right-side">
                 <select id="timing" class="timing">
@@ -56,22 +56,30 @@
                 <th>Task</th>
                 <th>Category</th>
                 <th>Deadline</th>
+                <th></th>
+                <th></th>
             </tr>
             <div class="list-items">
                 <tr class="list-item" draggable="true">
                     <td>React</td>
-                    <td>Coding</td>
-                    <td>22 May , 2023</td>
+                    <td>Coding Practise</td>
+                    <td>24 March , 2023</td>
+                    <td><i class="fa-sharp fa-solid fa-hammer"></i> &nbspUpdate</td>
+                    <td><i class="fa-solid fa-trash"></i> &nbspDelete</td>
                 </tr>
                 <tr class="list-item" draggable="true">
                     <td>TypeScript</td>
-                    <td>Learning</td>
-                    <td>22 May , 2023</td>
+                    <td>Project Making</td>
+                    <td>18 March , 2023</td>
+                    <td><i class="fa-sharp fa-solid fa-hammer"></i> &nbspUpdate</td>
+                    <td><i class="fa-solid fa-trash"></i> &nbspDelete</td>
                 </tr>
                 <tr class="list-item" draggable="true">
-                    <td>Engineering</td>
-                    <td>Youtube</td>
-                    <td>22 May , 2023</td>
+                    <td>University</td>
+                    <td>Degree</td>
+                    <td>10 June , 2024</td>
+                    <td><i class="fa-sharp fa-solid fa-hammer"></i> &nbspUpdate</td>
+                    <td><i class="fa-solid fa-trash"></i> &nbspDelete</td>
                 </tr>
             </div>
         </table>
@@ -80,24 +88,25 @@
     <!-- Important Task Area -->
 
     <div id="important-task-area" class="important-task-area">
+        <h2 class="important-task-area-main-heading"><i class="fa-sharp fa-solid fa-skull-crossbones"></i> &nbspUpcoming Deadlines</h2>
         <div class="important-list-item">
             <div class="date-time">
-                <span class="date">20</span>
-                <span class="month">May</span>
+                <span class="date">18</span>
+                <span class="month">March</span>
             </div>
             <div class="title-deadline">
-                <p class="title">React</p>
-                <p class="deadline-timing">Today</p>
+                <p class="title">TypeScript</p>
+                <p class="deadline-timing">Category : Project Making</p>
             </div>
         </div>
         <div class="important-list-item">
             <div class="date-time">
-                <span class="date">20</span>
-                <span class="month">May</span>
+                <span class="date">24</span>
+                <span class="month">March</span>
             </div>
             <div class="title-deadline">
                 <p class="title">React</p>
-                <p class="deadline-timing">Today</p>
+                <p class="deadline-timing">Category : Coding Practise</p>
             </div>
         </div>
     </div>
